--- a/FirstJSCode.html
+++ b/FirstJSCode.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <H1>This is my first code</H1>
-    <script src="FirstNodeCode.js"></script>
-    <script src="DataType.js"></script>
+    <!-- <script src="FirstNodeCode.js"></script>
+    <script src="DataType.js"></script> -->
+    <script src="Operators.js"></script>
 </body>
 </html>
