--- a/FirstJSCode.html
+++ b/FirstJSCode.html
@@ -11,5 +11,6 @@
     <!-- <script src="FirstNodeCode.js"></script>
     <script src="DataType.js"></script> -->
     <script src="Operators.js"></script>
+    <script src="ControlFlow.js"></script>
 </body>
 </html>
