--- a/HtmlAndCss/BasicHtml.html
+++ b/HtmlAndCss/BasicHtml.html
@@ -29,7 +29,7 @@
     <div></div>
     <div>Please fill below mandatory field</div>
 
-    <form action="Basic.html" method="GET">
+    <form action="./Basic.html" method="GET">
     <input type="text" name="version" placeholder="Type Your Name">
     <button type="'submit">Submit</button>
     </form>
