--- a/HtmlAndCss/BasicCss.html
+++ b/HtmlAndCss/BasicCss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Basic CSS</title>
     <link rel="stylesheet" href="./basicStyle.css">
 </head>
 <body>
@@ -14,5 +14,8 @@
     <div>Background</div>
     <div id="bckId">Background with id</div>
     <div class="bckClass">Background with class</div>
+    <div id="js">Java Scripts</div>
+    <script src="./scripts.js">OK</script>
+    <button type="submit">Submit</button>
 </body>
 </html>
