--- a/Practice/ChildNodes/first.html
+++ b/Practice/ChildNodes/first.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Child elements</title>
 </head>
 <body>
-    <!-- <script src="./Closure.js"></script> -->
-    <script src="./closureSetTimeout.js"></script>
+    <div>
+        <p>I am learning Java scripts</p>
+        <span>I am learning HTML and CSS</span>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
